1.1.5 2026-01-28
- feat: add lifecycle, data injection, and benchmarking skills to .agent/skills/ for automated project usage using AFF format.
- test: verify MariaDB 11.8 integration and data injection after resolving volume staleness issues.

1.1.4 2026-01-28
- feat: update MySQL 9.3 to 9.6 and re-add MySQL 5.7 support.
- fix: deduplicate Makefile targets to resolve "overriding recipe" warnings.
- fix: correct authentication in Makefile targets to use ${DB_ROOT_PASSWORD} instead of hardcoded rootpass.
- fix: add '-r' to xargs in stop target to prevent errors when no containers are running.
- update: synchronize README.md, README_fr.md, and interactive_runner.py with latest DB versions.

1.1.3 2026-01-28
- feat: add README_fr.md for bilingual documentation support.
- doc: synchronize project structure links in README.md.
- doc: update README and README_fr.md to include MariaDB 11.8 support.
- chore: remove all references to non-existent Percona 8.4.

1.1.2 2026-01-28
- feat: standardize cluster naming convention to galera-* and repli-*.
- fix: centralize root credentials via .env in Makefile, docker-compose, and scripts.
- doc: document project-standard IP ranges in README.md.
- refactor: remove hardcoded rootpass from all orchestration assets.

1.0.15 2026-01-28
 - feat: standardize all technical comments and documentation to English.
 - feat: update governance rules (03_execution_rules.md) to enforce English-only policy.
 - fix: resolve unbound variable 'EXTRA_ARGS' in start_mariadb.sh affecting Galera joins.
 - refactor: translate all test scripts (replication, galera, haproxy) to English.
 - chore: translate Dockerfile and supervisor configuration to English.

1.0.14 2026-01-28

1.0.13 2026-01-16

1.0.11 2026-01-16
 - feat: adapt interactive_runner.py with interactive installation type selection (Standalone, Galera, Replication).
 - feat: add HTML report generation to test_config.sh under reports/ directory.