@@ -1,5 +1,6 @@
 1.1.5 2026-01-28
 - feat: add lifecycle, data injection, and benchmarking skills to .agent/skills/ for automated project usage using AFF format.
+- fix: remove hardcoded root passwords from scripts/ (backup, restore, setup, profiles) and replace with .env/environment variable support.
 - test: verify MariaDB 11.8 integration and data injection after resolving volume staleness issues.
 
 1.1.4 2026-01-28
